Updated mile 4. Fix recycler, image